--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -2,28 +2,35 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_friends"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.friends.FriendsFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_usergrass" />
+
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="64dp"
+        android:id="@+id/plusButton"
+        android:layout_width="064dp"
         android:layout_height="64dp"
         android:layout_marginTop="-152dp"
         android:layout_marginEnd="16dp"
-        android:scaleType="centerCrop"
-        android:padding="0dp"
-        android:src="@drawable/plus"
         android:background="@android:color/transparent"
+        android:contentDescription="AddFriendsButton"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/plus"
+        android:text="친구 추가"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        android:contentDescription="AddFriendsButton" />
+        app:layout_constraintTop_toBottomOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_usergrass"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
