--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -10,7 +10,7 @@
 
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/searchWindow"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
@@ -46,6 +46,7 @@
             android:minWidth="48dp"
             android:minHeight="48dp" />
         <Button
+            android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/searchEditText"
@@ -65,10 +66,10 @@
         android:layout_margin="24dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="24dp"
-        app:layout_constraintBottom_toTopOf="@id/relativeLayout" >
+        app:layout_constraintBottom_toTopOf="@id/searchWindow" >
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="나의 이름"
@@ -99,19 +100,20 @@
     </androidx.cardview.widget.CardView>
     
     <androidx.cardview.widget.CardView
+        android:id="@+id/searchResult"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_margin="24dp"
         app:cardCornerRadius="24dp"
-        app:layout_constraintTop_toBottomOf="@id/relativeLayout">
+        app:layout_constraintTop_toBottomOf="@id/searchWindow"
+        android:visibility="gone">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/searchResultName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="24dp"
             android:gravity="center"
-            android:text="김갑수"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="24sp"
@@ -132,5 +134,15 @@
             android:minWidth="80dp"
             android:minHeight="48dp"/>
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/searchFailedText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textAlignment="center"
+        android:text="검색 결과가 없습니다."
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/searchWindow"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
