--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -11,11 +11,11 @@
 
     <RelativeLayout
         android:id="@+id/searchWindow"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="160dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="24dp"
         android:background="@drawable/border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,7 +34,7 @@
 
         <EditText
             android:id="@+id/searchEditText"
-            android:layout_width="208dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="40dp"
@@ -49,7 +49,8 @@
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/searchEditText"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="8dp"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_green_button"
             android:text="검색"
