--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -127,11 +127,12 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/circle_green_button"
+            android:background="@drawable/round_gray_button"
             android:text="추가하기"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:enabled="false"
             android:minWidth="80dp"
             android:minHeight="48dp"/>
     </androidx.cardview.widget.CardView>
