--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -11,13 +11,13 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:layout_margin="12dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_usergrass" />
 
     <ImageButton
         android:id="@+id/plusButton"
-        android:layout_width="064dp"
+        android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginTop="-152dp"
         android:layout_marginEnd="16dp"
