--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -99,7 +99,7 @@
             app:layout_constraintBaseline_toTopOf="parent"
             app:srcCompat="@drawable/round_white_button" />
     </androidx.cardview.widget.CardView>
-    
+
     <androidx.cardview.widget.CardView
         android:id="@+id/searchResult"
         android:layout_width="match_parent"
@@ -127,11 +127,12 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/circle_green_button"
+            android:background="@drawable/round_gray_button"
             android:text="추가하기"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:enabled="false"
             android:minWidth="80dp"
             android:minHeight="48dp"/>
     </androidx.cardview.widget.CardView>
