--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,41 +30,50 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="40sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="35sp"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imagelogo"
-                        android:layout_width="145dp"
-                        android:layout_height="40dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_margin="5dp"
-                        android:layout_weight="2"
+                        android:layout_weight="4"
                         app:srcCompat="@drawable/logo_word_black" />
 
                     <Space
-                        android:layout_width="159dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="2" />
+                        android:layout_weight="3" />
 
-                    <ImageView
-                        android:id="@+id/imagebell"
-                        android:layout_width="30dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/icon_bell" />
+                        android:layout_weight="5"
+                        android:orientation="horizontal">
 
-                    <Space
-                        android:layout_width="15dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2" />
+                        <ImageView
+                            android:id="@+id/imagebell"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="10"
+                            app:layout_constraintEnd_toEndOf="@id/imageprofile"
+                            app:srcCompat="@drawable/icon_bell" />
 
-                    <ImageView
-                        android:id="@+id/imageprofile"
-                        android:layout_width="30dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/icon_user" />
+                        <Space
+                            android:layout_width="40dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="6" />
+
+                        <ImageView
+                            android:id="@+id/imageprofile"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="10"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:srcCompat="@drawable/icon_user" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
