--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardFragment" >
+    tools:context=".ui.dashboard.DashboardFragment"
+    android:id="@+id/fragment_container" >
 
     <FrameLayout
-        android:id="@+id/fragment_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:paddingTop="0dp"
@@ -20,7 +20,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingTop="15dp">
 
             <Button
                 android:id="@+id/addchallnege_btn"
@@ -37,7 +38,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center" >
+                android:gravity="center"
+                android:paddingTop="8dp">
 
 
                 <androidx.recyclerview.widget.RecyclerView
